hphp/test/zend/good/Zend/tests/mul_001.php.expectf

Fatal error: Invalid operand type was used: cannot perform this operation with arrays in %s/mul_001.php on line 6
